@@ -407,6 +407,7 @@ Release 0.21.0 - Unreleased
    HBASE-2741  HBaseExecutorService needs to be multi-cluster friendly
                (Karthik Ranganathan via JD)
    HBASE-2769  Fix typo in warning message for HBaseConfiguration
+   HBASE-2768  Fix teardown order in TestFilter
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
